@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-06-05 Marc Delisle  <lem9@users.sourceforge.net>
+    * Documentation.html: new faq 6.20 about CREATE TEMPORARY TABLES
+
 2003-06-05 Michal Cihar  <nijel@users.sourceforge.net>
     * libraries/display_export.lib.php3, libraries/functions.js: Some
       javascript cleanup.
